# svg-animate

./: .gitignore  Cargo.toml  base.anim  std.anim  test.anim  test.anim.ir  test2.anim  test2.anim.ir  video.anim
benches/: bench.anim  render.rs
derive/: Cargo.toml
derive/src/: lib.rs
src/: analysis.rs  ast.rs  desktop.rs  ir.rs  lex.rs  lib.rs  main.rs  parse.rs  pc.rs  tokens.rs  wasi.rs
webide/: package-lock.json  package.json  vite.config.js
webide/src/: App.vue  main.js
