[package]
name = "svg-animate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
svg = "0.13.1"
derive-parse = {path = "derive"}
derive_more = "0.99.17"
nom_locate = "4.1.0"
resvg = "0.35.0"

[profile.dev.package."*"]
opt-level = 3
