[package]
name = "svg_animate"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
svg = "0.13.1"
derive-parse = {path = "derive"}
derive_more = "0.99.17"
resvg = "0.35.0"
clap = { version = "4.3.23", features = ["derive"] }

[profile.dev.package.resvg]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "render"
harness = false
